--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,13 @@
 #logo {
     margin-top: 14%;
 }
+
+#about-us{
+    text-align: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
+  }
+
+#about-us{
+    text-transform: uppercase;
+  }
